# experiments

./: README.md  package.json  server.js
mhg-finetune/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
mhg-finetune/configs/: generation_config.yaml  training_config.yaml
mhg-finetune/data/: eval.jsonl  train.jsonl
mhg-finetune/scripts/: clean_data.py  collect_texts.py  convert_to_webllm.py  evaluate.py  generate_data.py  preprocess.py  train.py
mhg-finetune/scripts/utils/: __init__.py  dedup.py  mhg_heuristics.py
morse-chatbot/: README.md  package-lock.json  package.json  server.js
morse-chatbot/public/: index.html  style.css
morse-chatbot/public/js/: app.js  audio.js  llm.js  morse.js  tap.js
morse-chatbot/routes/: chat.js
public/mhg-scriptorium/: README.md  index.html  meta.json  style.css
public/mhg-scriptorium/js/: app.js  chat.js  llm.js
public/morse-chatbot/: README.md  index.html  meta.json  style.css
public/morse-chatbot/js/: audio.js  chat.js  waveform.js
