[project]
name = "mhg-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.30.0",
    "anthropic>=0.25.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.19.0",
    "datasketch>=1.6.4",
    "evaluate>=0.4.0",
    "huggingface-hub>=0.23.0",
    "mlc-ai-nightly-cpu",
    "mlc-llm-nightly-cpu",
    "nltk>=3.8.0",
    "openai>=1.30.0",
    "peft>=0.11.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "sacrebleu>=2.3.1",
    "scipy>=1.13.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.6.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "transformers>=4.41.0",
    "trl>=0.9.0",
]
